razorpay api is working

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,6 +49,7 @@
       <img class="p-2 w-36" id="3" src="images/3.jpg" alt="img" />
       <img class="p-2 w-36" id="4" src="images/4.jpg" alt="img" />
     </div>
+    <button id="buyBtn">Buy</button>
     <div class="grid justify-items-center">
       Follow us on social media
       <div class="flex gap-24">
@@ -82,6 +83,7 @@
         <a class="p-1 px-3" href="www.google.com">Instagram</a>
       </div>
     </div>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
